# ExistOS-for-HP39GII_new

./: CMakeLists.txt
System/: CMakeLists.txt
apps/: CMakeLists.txt  llapi.c  llapi.h
apps/coremark/: CMakeLists.txt  crt0.c  main.c
apps/coremark/coremark/: core_portme.c  coremark.h
apps/faultTask/: CMakeLists.txt  crt0.c  main.c  stub.c
apps/khicas/: CMakeLists.txt  app_config.h  font.h  keys_39gii.h  main.c  porting.cpp  stub.c
apps/khicas/khicas_src/giac39/: Makefile  global.cc  kdisplay.cc  libkcasgui.libcpp  solve.h
apps/khicas/libs/: libtommath.libc
apps/script/: ld.lds
apps/shell_gui/: CMakeLists.txt  app_config.h  cursor_icon.c  lv_conf.h  lvfs.c  lvfs.h  main.c  stub.c
apps/shell_gui/fe/: lv_100ask_file_explorer.c  lv_100ask_file_explorer.h
apps/shell_gui/framework/: ui.c  ui.h
apps/shell_gui/framework/screens/: ui_Screen1.c
apps/shell_gui/lvgl/src/draw/sw/: lv_draw_sw_blend.c
apps/wasm3/: CMakeLists.txt  app_config.h  cm.h  crt0.c  main.c  wasi.c  wasi.h
boot0/: CMakeLists.txt  boot.c  exception.c  loader.h  logo.h  lwipopts.h  main.c  stmp3770_firmware.c  stmp3770_firmware.h  stub.c  sys_arch.c  tusb_config.h  usb_descriptors.c  utils.c  utils.h
boot0/bsp/: board.c  board.h  clk.c  clk.h  display.c  font.c  irq.c  keyboard.c  keyboard.h  nand.c
boot0/script/: ld.lds
boot0/webdata/: fsdata.c
boot0/webdata/html/fs/: 404.html  done.html  index.html  index.js  lfs.js  lfs_err.js
boot1/: CMakeLists.txt  config.h  exception.c  head.c  libc.c  main.c  mm.c  mm.h  stub.c  utils.c  utils.h
boot1/bsp/: bsp.c  bsp.h  nand.c
boot1/bsp/registers/: chip_io_map.h
boot1/script/: ld.lds
system/: CMakeLists.txt  FreeRTOSConfig.h  app_runtime.c  app_runtime.h  app_utils.c  app_utils.h  boot.c  exception.c  existos.h  gdbserver.c  gdbserver.h  httpd.c  hypercall.c  hypercall.h  lwipopts.h  main.c  printf.c  sideload_server.c  sideload_server.h  stub.c  sys_mmap.c  sys_mmap.h  tusb_config.h  usb.c  utils.c  utils.h
system/FreeRTOS/: tasks.c
system/FreeRTOS/include/: FreeRTOS.h  portable.h  task.h
system/FreeRTOS/portable/: heap_4.c_off  port.c  portISR.c  portmacro.h
system/bsp/: board.c  board.h  clk.c  display.c  font.c  irq.c  keyboard.c  keyboard.h
system/script/: ld.lds
system/webdata/: fsdata.c
system/webdata/html/: mkfs.sh  mkfsdata
system/webdata/html/fs/: 404.html  index.html
